# oreboot

src/arch/x86/x86_64/: Cargo.toml
src/arch/x86/x86_64/src/: bios.rs  bzimage.rs  lib.rs
src/drivers/uart/: Cargo.toml
src/drivers/uart/src/: i8250.rs
src/drivers/wrappers/src/: lib.rs
src/mainboard/amd/romecrb/: link.ld  patch.go  start.S
src/mainboard/amd/romecrb/src/: bootblock.S  c00.rs  main.rs  mainboard.rs  msr.rs
