[package]
name = "uart"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2018"

[profile.release]
opt-level = 'z'  # Optimize for size.

[dependencies]
model = { path = "../model"}
clock = { path = "../clock"}
register = "0.5.x"

# Heapless does not build for rv32imc.
[dependencies.heapless]
version = "0.5.x"
optional = true

[features]
i8250 = []
pl011 = []
ns16550 = []
sifive = []
log = []
opentitan = []
