[package]
name = "uart"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2018"

[profile.release]
opt-level = 'z'  # Optimize for size.

[dependencies]
arch = { path = "../../arch/x86/x86_64" }
model = { path = "../model"}
clock = { path = "../clock"}
register = "0.5.x"
heapless = { version = "0.*", optional = true }  # Heapless does not build for rv32imc.

[features]
i8250 = ["heapless"]
pl011 = []
ns16550 = []
sifive = []
log = ["heapless"]
opentitan = []
